# StringVerse

./: README.md  build.sh  calabi_yau.vtk  dev.sh  pyproject.toml
.github/workflows/: deploy.yml
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: CalabiYauScene.jsx  Controls.jsx  HUD.jsx  MatrixScene.jsx  StringScene.jsx
frontend/src/hooks/: useIsMobile.js  useWasm.js
src/stringverse/: main.py
src/stringverse/core/: interfaces.py  models.py
src/stringverse/physics/: matrix_engine.py  string_engine.py
src/stringverse/utils/: cy_generator.py
src/stringverse/visualization/: calabi_renderer.py  matrix_renderer.py  string_renderer.py
tests/: test_matrix_physics.py  test_string_physics.py
wasm/: Cargo.toml
wasm/src/: calabi_yau.rs  lib.rs  matrix_physics.rs  string_physics.rs
